@@ -1,88 +1,116 @@
-val Organization = "gitbucket"
-val Name = "gitbucket"
-val GitBucketVersion = "3.12.0"
-val ScalatraVersion = "2.4.0"
-val JettyVersion = "9.3.6.v20151106"
+import com.typesafe.sbt.license.{DepModuleInfo, LicenseInfo}
+import com.typesafe.sbt.pgp.PgpKeys._
 
-lazy val root = (project in file(".")).enablePlugins(SbtTwirl, JettyPlugin)
+val Organization = "io.github.gitbucket"
+val Name = "gitbucket"
+val GitBucketVersion = "4.31.2"
+val ScalatraVersion = "2.6.3"
+val JettyVersion = "9.4.14.v20181114"
+val JgitVersion = "5.2.0.201812061821-r"
+
+lazy val root = (project in file("."))
+  .enablePlugins(SbtTwirl, ScalatraPlugin)
+  .settings(
+    )
 
 sourcesInBase := false
 organization := Organization
 name := Name
 version := GitBucketVersion
-scalaVersion := "2.11.8"
+scalaVersion := "2.12.8"
+
+scalafmtOnCompile := true
+
+coverageExcludedPackages := ".*\\.html\\..*"
 
 // dependency settings
 resolvers ++= Seq(
   Classpaths.typesafeReleases,
-  "sonatype-snapshot" at "https://oss.sonatype.org/content/repositories/snapshots/"
-)
-libraryDependencies ++= Seq(
-  "org.scala-lang.modules"   %% "scala-java8-compat"           % "0.7.0",
-  "org.eclipse.jgit"          % "org.eclipse.jgit.http.server" % "4.1.1.201511131810-r",
-  "org.eclipse.jgit"          % "org.eclipse.jgit.archive"     % "4.1.1.201511131810-r",
-  "org.scalatra"             %% "scalatra"                     % ScalatraVersion,
-  "org.scalatra"             %% "scalatra-json"                % ScalatraVersion,
-  "org.json4s"               %% "json4s-jackson"               % "3.3.0",
-  "io.github.gitbucket"      %% "scalatra-forms"               % "1.0.0",
-  "commons-io"                % "commons-io"                   % "2.4",
-  "io.github.gitbucket"       % "markedj"                      % "1.0.7",
-  "org.apache.commons"        % "commons-compress"             % "1.10",
-  "org.apache.commons"        % "commons-email"                % "1.4",
-  "org.apache.httpcomponents" % "httpclient"                   % "4.5.1",
-  "org.apache.sshd"           % "apache-sshd"                  % "1.0.0",
-  "org.apache.tika"           % "tika-core"                    % "1.11",
-  "com.typesafe.slick"       %% "slick"                        % "2.1.0",
-  "com.novell.ldap"           % "jldap"                        % "2009-10-07",
-  "com.h2database"            % "h2"                           % "1.4.190",
-  "ch.qos.logback"            % "logback-classic"              % "1.1.1",
-  "com.mchange"               % "c3p0"                         % "0.9.5.2",
-  "com.typesafe"              % "config"                       % "1.3.0",
-  "com.typesafe.akka"        %% "akka-actor"                   % "2.3.14",
-  "fr.brouillard.oss.security.xhub" % "xhub4j-core"            % "1.0.0",
-  "com.enragedginger"        %% "akka-quartz-scheduler"        % "1.4.0-akka-2.3.x" exclude("c3p0","c3p0"),
-  "org.eclipse.jetty"         % "jetty-webapp"                 % JettyVersion     % "provided",
-  "javax.servlet"             % "javax.servlet-api"            % "3.1.0"          % "provided",
-  "junit"                     % "junit"                        % "4.12"           % "test",
-  "org.scalatra"             %% "scalatra-scalatest"           % ScalatraVersion  % "test",
-  "org.scalaz"               %% "scalaz-core"                  % "7.2.0"          % "test"
+  Resolver.jcenterRepo,
+  "amateras" at "http://amateras.sourceforge.jp/mvn/",
+  "sonatype-snapshot" at "https://oss.sonatype.org/content/repositories/snapshots/",
+  "amateras-snapshot" at "http://amateras.sourceforge.jp/mvn-snapshot/"
 )
 
-// Twirl settings
-play.twirl.sbt.Import.TwirlKeys.templateImports += "gitbucket.core._"
+libraryDependencies ++= Seq(
+  "org.eclipse.jgit"                % "org.eclipse.jgit.http.server" % JgitVersion,
+  "org.eclipse.jgit"                % "org.eclipse.jgit.archive"     % JgitVersion,
+  "org.scalatra"                    %% "scalatra"                    % ScalatraVersion,
+  "org.scalatra"                    %% "scalatra-json"               % ScalatraVersion,
+  "org.scalatra"                    %% "scalatra-forms"              % ScalatraVersion,
+  "org.json4s"                      %% "json4s-jackson"              % "3.5.2",
+  "commons-io"                      % "commons-io"                   % "2.6",
+  "io.github.gitbucket"             % "solidbase"                    % "1.0.3",
+  "io.github.gitbucket"             % "markedj"                      % "1.0.16",
+  "org.apache.commons"              % "commons-compress"             % "1.18",
+  "org.apache.commons"              % "commons-email"                % "1.5",
+  "org.apache.httpcomponents"       % "httpclient"                   % "4.5.6",
+  "org.apache.sshd"                 % "apache-sshd"                  % "2.1.0" exclude ("org.slf4j", "slf4j-jdk14") exclude ("org.apache.sshd", "sshd-mina") exclude ("org.apache.sshd", "sshd-netty"),
+  "org.apache.tika"                 % "tika-core"                    % "1.19.1",
+  "com.github.takezoe"              %% "blocking-slick-32"           % "0.0.11",
+  "com.novell.ldap"                 % "jldap"                        % "2009-10-07",
+  "com.h2database"                  % "h2"                           % "1.4.197",
+  "org.mariadb.jdbc"                % "mariadb-java-client"          % "2.3.0",
+  "org.postgresql"                  % "postgresql"                   % "42.2.5",
+  "ch.qos.logback"                  % "logback-classic"              % "1.2.3",
+  "com.zaxxer"                      % "HikariCP"                     % "3.2.0",
+  "com.typesafe"                    % "config"                       % "1.3.3",
+  "com.typesafe.akka"               %% "akka-actor"                  % "2.5.18",
+  "fr.brouillard.oss.security.xhub" % "xhub4j-core"                  % "1.1.0",
+  "com.github.bkromhout"            % "java-diff-utils"              % "2.1.1",
+  "org.cache2k"                     % "cache2k-all"                  % "1.2.0.Final",
+  "com.enragedginger"               %% "akka-quartz-scheduler"       % "1.7.0-akka-2.5.x" exclude ("c3p0", "c3p0") exclude ("com.zaxxer", "HikariCP-java6"),
+  "net.coobird"                     % "thumbnailator"                % "0.4.8",
+  "com.github.zafarkhaja"           % "java-semver"                  % "0.9.0",
+  "com.nimbusds"                    % "oauth2-oidc-sdk"              % "5.64.4",
+  "org.eclipse.jetty"               % "jetty-webapp"                 % JettyVersion % "provided",
+  "javax.servlet"                   % "javax.servlet-api"            % "3.1.0" % "provided",
+  "junit"                           % "junit"                        % "4.12" % "test",
+  "org.scalatra"                    %% "scalatra-scalatest"          % ScalatraVersion % "test",
+  "org.mockito"                     % "mockito-core"                 % "2.23.4" % "test",
+  "com.dimafeng"                    %% "testcontainers-scala"        % "0.22.0" % "test",
+  "org.testcontainers"              % "mysql"                        % "1.10.3" % "test",
+  "org.testcontainers"              % "postgresql"                   % "1.10.3" % "test",
+  "net.i2p.crypto"                  % "eddsa"                        % "0.3.0",
+  "is.tagomor.woothee"              % "woothee-java"                 % "1.8.0",
+  "org.ec4j.core"                   % "ec4j-core"                    % "0.0.3"
+)
 
 // Compiler settings
-scalacOptions := Seq("-deprecation", "-language:postfixOps", "-Ybackend:GenBCode", "-Ydelambdafy:method", "-target:jvm-1.8")
+scalacOptions := Seq("-deprecation", "-language:postfixOps", "-opt:l:method", "-Xfuture")
 javacOptions in compile ++= Seq("-target", "8", "-source", "8")
 javaOptions in Jetty += "-Dlogback.configurationFile=/logback-dev.xml"
-testOptions in Test += Tests.Argument(TestFrameworks.Specs2, "junitxml", "console")
+
+// Test settings
+//testOptions in Test += Tests.Argument("-l", "ExternalDBTest")
 javaOptions in Test += "-Dgitbucket.home=target/gitbucket_home_for_test"
-testOptions in Test += Tests.Setup( () => new java.io.File("target/gitbucket_home_for_test").mkdir() )
+testOptions in Test += Tests.Setup(() => new java.io.File("target/gitbucket_home_for_test").mkdir())
 fork in Test := true
+
+// Packaging options
 packageOptions += Package.MainClass("JettyLauncher")
 
 // Assembly settings
 test in assembly := {}
 assemblyMergeStrategy in assembly := {
   case PathList("META-INF", xs @ _*) =>
-    (xs map {_.toLowerCase}) match {
+    (xs map { _.toLowerCase }) match {
       case ("manifest.mf" :: Nil) => MergeStrategy.discard
-      case _ => MergeStrategy.discard
+      case _                      => MergeStrategy.discard
     }
   case x => MergeStrategy.first
 }
 
-// JRebel
-jrebel.webLinks += (target in webappPrepare).value
-jrebel.enabled := System.getenv().get("JREBEL") != null
-javaOptions in Jetty ++= Option(System.getenv().get("JREBEL")).toSeq.flatMap { path =>
-  Seq("-noverify", "-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled", s"-javaagent:${path}")
+// Exclude a war file from published artifacts
+signedArtifacts := {
+  signedArtifacts.value.filterNot {
+    case (_, file) => file.getName.endsWith(".war") || file.getName.endsWith(".war.asc")
+  }
 }
-jrebelSettings
 
 // Create executable war file
-val executableConfig = config("executable").hide
-Keys.ivyConfigurations += executableConfig
+val ExecutableConfig = config("executable").hide
+Keys.ivyConfigurations += ExecutableConfig
 libraryDependencies ++= Seq(
   "org.eclipse.jetty" % "jetty-security"     % JettyVersion % "executable",
   "org.eclipse.jetty" % "jetty-webapp"       % JettyVersion % "executable",
@@ -97,67 +125,136 @@ libraryDependencies ++= Seq(
 
 val executableKey = TaskKey[File]("executable")
 executableKey := {
-  import org.apache.ivy.util.ChecksumHelper
-  import java.util.jar.{ Manifest => JarManifest }
-  import java.util.jar.Attributes.{ Name => AttrName }
+  import java.util.jar.Attributes.{Name => AttrName}
+  import java.util.jar.{Manifest => JarManifest}
 
-  val workDir   = Keys.target.value / "executable"
-  val warName   = Keys.name.value + ".war"
+  val workDir = Keys.target.value / "executable"
+  val warName = Keys.name.value + ".war"
 
-  val log       = streams.value.log
+  val log = streams.value.log
   log info s"building executable webapp in ${workDir}"
 
   // initialize temp directory
-  val temp  = workDir / "webapp"
+  val temp = workDir / "webapp"
   IO delete temp
 
   // include jetty classes
-  val jettyJars = Keys.update.value select configurationFilter(name = executableConfig.name)
+  val jettyJars = Keys.update.value select configurationFilter(name = ExecutableConfig.name)
   jettyJars foreach { jar =>
-    IO unzip (jar, temp, (name:String) =>
+    IO unzip (jar, temp, (name: String) =>
       (name startsWith "javax/") ||
-      (name startsWith "org/")
-    )
+        (name startsWith "org/"))
   }
 
   // include original war file
-  val warFile   = (Keys.`package`).value
+  val warFile = (Keys.`package`).value
   IO unzip (warFile, temp)
 
   // include launcher classes
-  val classDir      = (Keys.classDirectory in Compile).value
-  val launchClasses = Seq("JettyLauncher.class" /*, "HttpsSupportConnector.class" */)
+  val classDir = (Keys.classDirectory in Compile).value
+  val launchClasses = Seq("JettyLauncher.class" /*, "HttpsSupportConnector.class" */ )
   launchClasses foreach { name =>
     IO copyFile (classDir / name, temp / name)
   }
 
+  // include plugins
+  val pluginsDir = temp / "WEB-INF" / "classes" / "plugins"
+  IO createDirectory (pluginsDir)
+
+  val plugins = IO readLines (Keys.baseDirectory.value / "src" / "main" / "resources" / "bundle-plugins.txt")
+  plugins.foreach { plugin =>
+    plugin.trim.split(":") match {
+      case Array(pluginId, pluginVersion) =>
+        val url = "https://plugins.gitbucket-community.org/releases/" +
+          s"gitbucket-${pluginId}-plugin/gitbucket-${pluginId}-plugin-gitbucket_${version.value}-${pluginVersion}.jar"
+        log info s"Download: ${url}"
+        IO transfer (new java.net.URL(url).openStream, pluginsDir / url.substring(url.lastIndexOf("/") + 1))
+      case _ => ()
+    }
+  }
+
   // zip it up
   IO delete (temp / "META-INF" / "MANIFEST.MF")
-  val contentMappings   = (temp.*** --- PathFinder(temp)).get pair relativeTo(temp)
-  val manifest          = new JarManifest
-  manifest.getMainAttributes put (AttrName.MANIFEST_VERSION,    "1.0")
-  manifest.getMainAttributes put (AttrName.MAIN_CLASS,          "JettyLauncher")
-  val outputFile    = workDir / warName
-  IO jar (contentMappings, outputFile, manifest)
+  val contentMappings = (temp.allPaths --- PathFinder(temp)).get pair { file =>
+    IO.relativizeFile(temp, file)
+  }
+  val manifest = new JarManifest
+  manifest.getMainAttributes put (AttrName.MANIFEST_VERSION, "1.0")
+  manifest.getMainAttributes put (AttrName.MAIN_CLASS, "JettyLauncher")
+  val outputFile = workDir / warName
+  IO jar (contentMappings.map { case (file, path) => (file, path.toString) }, outputFile, manifest)
 
   // generate checksums
   Seq(
-    "md5"    -> "MD5",
-    "sha1"   -> "SHA-1",
+    "md5" -> "MD5",
+    "sha1" -> "SHA-1",
     "sha256" -> "SHA-256"
-  )
-  .foreach { case (extension, algorithm) =>
-    val checksumFile = workDir / (warName + "." + extension)
-    Checksums generate (outputFile, checksumFile, algorithm)
+  ).foreach {
+    case (extension, algorithm) =>
+      val checksumFile = workDir / (warName + "." + extension)
+      Checksums generate (outputFile, checksumFile, algorithm)
   }
 
   // done
   log info s"built executable webapp ${outputFile}"
   outputFile
 }
-/*
-Keys.artifact in (Compile, executableKey) ~= {
-    _ copy (`type` = "war", extension = "war"))
+publishTo := {
+  val nexus = "https://oss.sonatype.org/"
+  if (version.value.trim.endsWith("SNAPSHOT")) Some("snapshots" at nexus + "content/repositories/snapshots")
+  else Some("releases" at nexus + "service/local/staging/deploy/maven2")
 }
-addArtifact(Keys.artifact in (Compile, executableKey), executableKey)
-*/
+publishMavenStyle := true
+pomIncludeRepository := { _ =>
+  false
+}
+pomExtra := (
+  <url>https://github.com/gitbucket/gitbucket</url>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+  <scm>
+    <url>https://github.com/gitbucket/gitbucket</url>
+    <connection>scm:git:https://github.com/gitbucket/gitbucket.git</connection>
+  </scm>
+  <developers>
+    <developer>
+      <id>takezoe</id>
+      <name>Naoki Takezoe</name>
+      <url>https://github.com/takezoe</url>
+    </developer>
+    <developer>
+      <id>shimamoto</id>
+      <name>Takako Shimamoto</name>
+      <url>https://github.com/shimamoto</url>
+    </developer>
+    <developer>
+      <id>tanacasino</id>
+      <name>Tomofumi Tanaka</name>
+      <url>https://github.com/tanacasino</url>
+    </developer>
+    <developer>
+      <id>mrkm4ntr</id>
+      <name>Shintaro Murakami</name>
+      <url>https://github.com/mrkm4ntr</url>
+    </developer>
+    <developer>
+      <id>nazoking</id>
+      <name>nazoking</name>
+      <url>https://github.com/nazoking</url>
+    </developer>
+    <developer>
+      <id>McFoggy</id>
+      <name>Matthieu Brouillard</name>
+      <url>https://github.com/McFoggy</url>
+    </developer>
+  </developers>
+)
+
+licenseOverrides := {
+  case DepModuleInfo("com.github.bkromhout", "java-diff-utils", _) =>
+    LicenseInfo(LicenseCategory.Apache, "Apache-2.0", "http://www.apache.org/licenses/LICENSE-2.0")
+}
